Fix so that interval string doesn't break, finance name dosnt overflow

--- a/public/styles/molecules/_finance-item.scss
+++ b/public/styles/molecules/_finance-item.scss
@@ -3,6 +3,7 @@
 	margin: 0 0.5em 0 0;
 	padding: 0 0 0 0.5em;
 	text-align: left;
+	flex-shrink: 0;
 }
 
 .finance-item {
@@ -68,7 +69,7 @@
 	float: left;
 	flex-grow: 1;
 
-	font-size: 1.125em;
+	font-size: 1.075em;
 	font-weight: 600;
 	letter-spacing: 0.035em;
 	text-align: right;
